--- a/app/About-Me.html
+++ b/app/About-Me.html
@@ -2,45 +2,45 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid-layout</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid-layout</title>
 </head>
 
 <body>
-  <header class="site-header">
-    <nav class="site-header__nav">
-      <ul class="site-header__links">
-        <li class="site-header__link"><a href="index.html">Home</a></li>
-        <li class="site-header__link"><a href="About-Me.html">About Me</a></li>
-      </ul>
-      <div class="site-header__logo">
-        <h1 class="site-header__title">Grid layout</h1>
-      </div>
-    </nav>
-    <div class="content">
-        <div class="two-column-wrapper">
-            <div class="profile-image-wrapper">
-              <img src="assets/images/profile.jpg" alt="">
+    <header class="site-header">
+        <nav class="site-header__nav">
+            <ul class="site-header__links">
+                <li class="site-header__link"><a href="index.html">Home</a></li>
+                <li class="site-header__link"><a href="About-Me.html">About Me</a></li>
+            </ul>
+            <div class="site-header__logo">
+                <h1 class="site-header__title">Grid layout</h1>
             </div>
-    
-            <div class="profile-content-wrapper">
-              <h1>Hi, thanks for visiting my site.</h1>
-              <p>With over a decade of development experience in a number of industries I realized that the typical product creation
-                process between clients and developers was flawed. All too often developers rarely communicate to clients throughout
-                the development stage, resulting in a final product that fails to reach the goal sought by the customer and end
-                user.
-              </p>
-    
-              <p>For this reason I decided to utilize a completely different development pattern that focuses on highly focused
-                communication and transparent design patterns. When I take on a project not only do I work to craft the application
-                according to the client's specifications, I give daily updates to ensure that the project is aligning properly
-                with the client's goals. The end result is the right product, delivered on time, and on budget.</p>
-            </div>
-          </div>
-    </div>
+        </nav>
+        <div class="content">
+            <div class="two-column-wrapper">
+                <div class="profile-image-wrapper">
+                    <img src="assets/images/profile.jpg" alt="">
+                </div>
 
-  </header>
+                <div class="profile-content-wrapper">
+                    <h1>Hi, thanks for visiting my site.</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odit cupiditate laborum, ipsa
+                        aliquid eveniet cumque asperiores ipsum commodi minus dignissimos obcaecati adipisci. Eveniet
+                        culpa, beatae assumenda nulla quia aspernatur.
+                    </p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam, tempora adipisci in
+                        eum quidem architecto blanditiis minima odio quia? Consectetur quaerat, facilis aliquid vitae
+                        magni aut autem! Minima, deleniti!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </header>
 
 </body>
+
 </html>
